--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -236,6 +236,13 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" 
+               href="{% url 'add_clin_pers' %}">
+              <i class="ni ni-single-02 text-info"></i>
+              <span class="nav-link-text ">Add Clinic Staff</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" 
                href="{% url 'add_location' %}">
               <i class="ni ni-square-pin text-info"></i>
               <span class="nav-link-text ">Add Cities</span>
