--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -219,10 +219,10 @@
                 </div> </div>
               </div>
             </div>
-            <div class="table-responsive">
-              <!-- Projects table -->
+          <div class="table-responsive" style="max-height: 400px; overflow-y: auto; overflow-x: auto;">
+  <!-- Projects table -->
               <table class="table align-items-center table-flush table-hover">
-                <thead class="thead-dark" >
+                <thead class="thead-dark">
                   <tr>
                     <th scope="col" class="sort" data-sort="Egasp_Id" style="color: white; text-align: center;">EGASP ID</th>
                     <th scope="col" class="sort" data-sort="Laboratory" style="color: white; text-align: center;">Laboratory</th>
@@ -240,29 +240,29 @@
                 </thead>
                 <tbody class="list">
                   {% for isolate in isolates %}
-                 <tr>
-                  <td style="text-align: center;">{{isolate.Egasp_Id}}</td>
-                  <td style="text-align: center;">{{isolate.Laboratory}}</td>
-                  <td style="text-align: center;">{{isolate.Clinic}}</td>
-                  <td style="text-align: center;">{{isolate.Consult_Date}}</td>
-                  <td style="text-align: center;">{{isolate.Consult_Type}}</td>
-                  <td style="text-align: center;">{{isolate.Uic_Ptid}}</td>
-                  <td style="text-align: center;">{{isolate.Clinic_Code}}</td>
-                  <td style="text-align: center;">{{isolate.First_Name}}</td>
-                  <td style="text-align: center;">{{isolate.Last_Name}}</td>
-                  <td style="text-align: center;">{{isolate.Birthdate}}</td>
-                  <td style="text-align: center;">{{isolate.Sex}}</td>
-               
-               
-  
-                     
-                      <td><a href="{%url 'generate_pdf' isolate.id %}" class="text-danger"> <i class="fa fa-print" aria-hidden="true"></i> View/Print </a></td>
-  
-  
-                </tr>
-                 {% endfor %}
+                  <tr>
+                    <td style="text-align: center;">{{isolate.Egasp_Id}}</td>
+                    <td style="text-align: center;">{{isolate.Laboratory}}</td>
+                    <td style="text-align: center;">{{isolate.Clinic}}</td>
+                    <td style="text-align: center;">{{isolate.Consult_Date}}</td>
+                    <td style="text-align: center;">{{isolate.Consult_Type}}</td>
+                    <td style="text-align: center;">{{isolate.Uic_Ptid}}</td>
+                    <td style="text-align: center;">{{isolate.Clinic_Code}}</td>
+                    <td style="text-align: center;">{{isolate.First_Name}}</td>
+                    <td style="text-align: center;">{{isolate.Last_Name}}</td>
+                    <td style="text-align: center;">{{isolate.Birthdate}}</td>
+                    <td style="text-align: center;">{{isolate.Sex}}</td>
+                    <td><a href="{%url 'generate_pdf' isolate.id %}" class="text-danger"> <i class="fa fa-print" aria-hidden="true"></i> View/Print </a></td>
+                  </tr>
+                  {% endfor %}
                 </tbody>
               </table>
+            </div>
+            </div>
+                          
+  
+                     
+
            
            
             </div>
@@ -286,6 +286,83 @@
           </div>
         </div> -->
       </div>
+      <!-- Card footer -->
+          <div class="card-footer py-4">
+            <nav aria-label="...">
+              <ul class="pagination justify-content-center mb-0">
+              <!-- Previous Page -->
+                      {% if page_obj.has_previous %}
+                      <li class="page-item active">
+                        <a class="page-link" href="?page=1" tabindex="-1">
+                          <i class="fas fa-angle-double-left"></i>
+                          <span class="sr-only">First</span>
+                        </a>
+                      </li>
+                      <li class="page-item active">
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+                          <i class="fas fa-angle-left"></i>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                      </li>
+                    {% else %}
+                      <li class="page-item disabled">
+                        <a class="page-link" href="#" tabindex="-1">
+                          <i class="fas fa-angle-double-left"></i>
+                          <span class="sr-only">First</span>
+                        </a>
+                      </li>
+                      <li class="page-item disabled">
+                        <a class="page-link" href="#" tabindex="-1">
+                          <i class="fas fa-angle-left"></i>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                      </li>
+                    {% endif %}
+
+                    <!-- Current Page -->
+                    <!-- <li class="page-item active"> -->
+                     <!-- <p>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</p> -->
+                      <!-- <a class="page-link" href="#">{{ page_obj.number }}</a> -->
+                    <!-- </li> -->
+
+
+                    <!-- Next Page -->
+                    {% if page_obj.has_next %}
+                      <li class="page-item active" >
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+                          <i class="fas fa-angle-right"></i>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </li>
+                      <li class="page-item active">
+                        <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">
+                          <i class="fas fa-angle-double-right"></i>
+                          <span class="sr-only">Last</span>
+                        </a>
+                      </li>
+                    {% else %}
+                      <li class="page-item disabled">
+                        <a class="page-link" href="#">
+                          <i class="fas fa-angle-right"></i>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </li>
+                      <li class="page-item disabled">
+                        <a class="page-link" href="#">
+                          <i class="fas fa-angle-double-right"></i>
+                          <span class="sr-only">Last</span>
+                        </a>
+                      </li>
+                    {% endif %}
+                </ul>
+                    <!-- Current Page -->
+                    <div class="d-flex justify-content-center mb-0" style="margin-top: 15px;">
+                      <div class="row ">
+                      <a href="#" style="font-size: small; text-align: center;">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</a>
+                      </div>
+                  </div>
+            </nav>
+          </div>
 
    
 
