--- a/apps/templates/home/tables.html
+++ b/apps/templates/home/tables.html
@@ -71,7 +71,7 @@
           </div>
           <div class="card-body">
           <!-- Light table -->
-          <div class="table-responsive">
+          <div class="table-responsive" style="max-height: 500px;  overflow-y: auto; overflow-x: auto;">
            <table class="table align-items-center table-flush" style="border-collapse: collapse; margin: 0%; padding: 0%;">
               <thead class="thead-light" style="text-align: center;">
                 <tr>
